Atualização projeto competição IA CEAG 2025 - Rubricas e documentação

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linguagens de Programação - Resumo</title>.//
+    <title>Linguagens de Programação - Primeira Competição de Programação com IA CEAG 2025</title>
     <link rel="stylesheet" href="style.css">// link para o arquivo de estilização css
 </head>
 <body>
@@ -12,9 +12,9 @@
         <p>Descubra o essencial sobre as principais linguagens para desenvolvimento moderno</p>
         <div class="desc-competicao">
             <p>
-                <strong>Competição de Programação 2025</strong><br>
+                <strong>Primeira Competição de Programação com IA CEAG 2025</strong><br>
                 No Colégio Estadual Alto da Glória, os alunos do <b>1º, 2º e 3º ano B</b> do Ensino Médio Profissional em Análise de Projeto de Sistemas devem escolher uma das linguagens abaixo para se especializar.<br>
-                Entre <b>outubro e dezembro</b> será realizada uma competição onde cada aluno irá programar projetos utilizando a linguagem escolhida.<br>
+                Entre <b>outubro e dezembro</b> será realizada a primeira competição onde cada aluno irá programar projetos utilizando a linguagem escolhida, focando no <b>tema AGRINHO 2025</b>.<br>
                 Prepare-se, escolha sua linguagem e destaque-se!
             </p>
         </div>
