Adiciona link das rubricas de etapas no portal principal

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         Mini-site Linguagens & Competição
         <div class="desc">Informações sobre linguagens de programação e regras da competição escolar.</div>
       </a>
+      <a class="link-card" href="site/rubricas_etapas.html" target="_blank">
+        Rubricas de Avaliação por Etapa
+        <div class="desc">Sistema completo de rubricas para avaliação das 8 etapas da competição.</div>
+      </a>
       <a class="link-card" href="javascript/index.html" target="_blank">
         Hello World Criativo
         <div class="desc">Página "Hello World" com design moderno, minimalista e animado.</div>
