Adiciona página HTML para etapas de especialização e link no portal principal

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         Rubricas de Avaliação por Etapa
         <div class="desc">Sistema completo de rubricas para avaliação das 8 etapas da competição.</div>
       </a>
+      <a class="link-card" href="site/etapas_especializacao.html" target="_blank">
+        Etapas para Especialização
+        <div class="desc">Guia detalhado das 8 etapas de programação para desenvolver na linguagem escolhida.</div>
+      </a>
       <a class="link-card" href="javascript/index.html" target="_blank">
         Hello World Criativo
         <div class="desc">Página "Hello World" com design moderno, minimalista e animado.</div>
