Atualiza instruções sobre temas: etapas 1-7 livre/AGRINHO, etapa 8 AGRINHO obrigatório

--- a/site/etapas_especializacao.html
+++ b/site/etapas_especializacao.html
@@ -185,6 +185,13 @@
                     <span class="linguagem">p5.js</span>
                     <span class="linguagem">Python</span>
                 </div>
+                <div style="margin-top: 20px; padding: 15px; background: #fff8e1; border-radius: 8px; border-left: 4px solid #ffc107;">
+                    <p style="margin: 0; color: #e65100;"><strong>🎯 Sobre os Temas:</strong></p>
+                    <p style="margin: 5px 0 0 0; color: #bf360c; font-size: 0.95rem;">
+                        <strong>Etapas 1-7:</strong> Tema livre ou relacionado ao AGRINHO (opcional)<br>
+                        <strong>Etapa 8:</strong> Tema AGRINHO obrigatório ("Como a comida do campo chega à cidade" ou "Alimentação Saudável")
+                    </p>
+                </div>
             </div>
             
             <div class="etapa">
