Adiciona coluna Projeto com links GitHub na tabela de avaliacao do 2º ano

--- a/site/Rubrica_Etapa1_2Ano_Preenchida.html
+++ b/site/Rubrica_Etapa1_2Ano_Preenchida.html
@@ -194,17 +194,19 @@
             <thead>
                 <tr>
                     <th data-type="text">Aluno</th>
+                    <th data-type="text">Projeto</th>
                     <th data-type="number">Funcionamento</th>
                     <th data-type="number">Código</th>
                     <th data-type="number">Criatividade</th>
                     <th data-type="number">Total</th>
-                    <th data-type="number">Nota (0-10)</th>
+                    <th data-type="number" class="sort-desc">Nota (0-10)</th>
                     <th data-type="text">Conceito</th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="nota-excelente">
                     <td><strong>CARLA</strong></td>
+                    <td><a href="https://github.com/carla-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
                     <td>4</td>
                     <td>4</td>
                     <td>4</td>
@@ -214,6 +216,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>VITORIA</strong></td>
+                    <td><a href="https://github.com/vitoria-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
                     <td>4</td>
                     <td>3</td>
                     <td>4</td>
@@ -223,6 +226,17 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>LUCAS</strong></td>
+                    <td><a href="https://github.com/lucas-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td>4</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>10</td>
+                    <td>8,3</td>
+                    <td>B</td>
+                </tr>
+                <tr class="nota-boa">
+                    <td><strong>DOUGLAS</strong></td>
+                    <td><a href="https://github.com/douglas-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
                     <td>4</td>
                     <td>3</td>
                     <td>3</td>
@@ -232,6 +246,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>DIRCEU</strong></td>
+                    <td><a href="https://github.com/dirceu-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
                     <td>3</td>
                     <td>3</td>
                     <td>3</td>
@@ -241,6 +256,17 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>LAYNE</strong></td>
+                    <td><a href="https://github.com/layne-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>9</td>
+                    <td>7,5</td>
+                    <td>B</td>
+                </tr>
+                <tr class="nota-boa">
+                    <td><strong>AGENOR</strong></td>
+                    <td><a href="https://github.com/agenor-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
                     <td>3</td>
                     <td>3</td>
                     <td>3</td>
@@ -250,6 +276,17 @@
                 </tr>
                 <tr class="nota-satisfatoria">
                     <td><strong>TAIS</strong></td>
+                    <td><a href="https://github.com/tais-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>8</td>
+                    <td>6,7</td>
+                    <td>C</td>
+                </tr>
+                <tr class="nota-satisfatoria">
+                    <td><strong>ERIK</strong></td>
+                    <td><a href="https://github.com/erik-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
                     <td>3</td>
                     <td>2</td>
                     <td>3</td>
@@ -259,39 +296,13 @@
                 </tr>
                 <tr class="nota-regular">
                     <td><strong>NATHANAEL</strong></td>
+                    <td><a href="https://github.com/nathanael-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
                     <td>2</td>
                     <td>2</td>
                     <td>2</td>
                     <td>6</td>
                     <td>5,0</td>
                     <td>D</td>
-                </tr>
-                <tr class="nota-boa">
-                    <td><strong>AGENOR</strong></td>
-                    <td>3</td>
-                    <td>3</td>
-                    <td>3</td>
-                    <td>9</td>
-                    <td>7,5</td>
-                    <td>B</td>
-                </tr>
-                <tr class="nota-boa">
-                    <td><strong>DOUGLAS</strong></td>
-                    <td>4</td>
-                    <td>3</td>
-                    <td>3</td>
-                    <td>10</td>
-                    <td>8,3</td>
-                    <td>B</td>
-                </tr>
-                <tr class="nota-satisfatoria">
-                    <td><strong>ERIK</strong></td>
-                    <td>3</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>8</td>
-                    <td>6,7</td>
-                    <td>C</td>
                 </tr>
             </tbody>
         </table>
