Corrige links fictícios na tabela do 2º ano - substitui por tipo de projeto

--- a/site/Rubrica_Etapa1_2Ano_Preenchida.html
+++ b/site/Rubrica_Etapa1_2Ano_Preenchida.html
@@ -206,7 +206,7 @@
             <tbody>
                 <tr class="nota-excelente">
                     <td><strong>CARLA</strong></td>
-                    <td><a href="https://github.com/carla-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 p5.js</span></td>
                     <td>4</td>
                     <td>4</td>
                     <td>4</td>
@@ -216,7 +216,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>VITORIA</strong></td>
-                    <td><a href="https://github.com/vitoria-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
                     <td>4</td>
                     <td>3</td>
                     <td>4</td>
@@ -226,7 +226,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>LUCAS</strong></td>
-                    <td><a href="https://github.com/lucas-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 C# GUI</span></td>
                     <td>4</td>
                     <td>3</td>
                     <td>3</td>
@@ -236,7 +236,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>DOUGLAS</strong></td>
-                    <td><a href="https://github.com/douglas-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
                     <td>4</td>
                     <td>3</td>
                     <td>3</td>
@@ -246,7 +246,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>DIRCEU</strong></td>
-                    <td><a href="https://github.com/dirceu-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 JS/CSS</span></td>
                     <td>3</td>
                     <td>3</td>
                     <td>3</td>
@@ -256,7 +256,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>LAYNE</strong></td>
-                    <td><a href="https://github.com/layne-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
                     <td>3</td>
                     <td>3</td>
                     <td>3</td>
@@ -266,7 +266,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>AGENOR</strong></td>
-                    <td><a href="https://github.com/agenor-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
                     <td>3</td>
                     <td>3</td>
                     <td>3</td>
@@ -276,7 +276,7 @@
                 </tr>
                 <tr class="nota-satisfatoria">
                     <td><strong>TAIS</strong></td>
-                    <td><a href="https://github.com/tais-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
                     <td>3</td>
                     <td>2</td>
                     <td>3</td>
@@ -286,7 +286,7 @@
                 </tr>
                 <tr class="nota-satisfatoria">
                     <td><strong>ERIK</strong></td>
-                    <td><a href="https://github.com/erik-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
                     <td>3</td>
                     <td>2</td>
                     <td>3</td>
@@ -296,7 +296,7 @@
                 </tr>
                 <tr class="nota-regular">
                     <td><strong>NATHANAEL</strong></td>
-                    <td><a href="https://github.com/nathanael-ceag/hello-world" target="_blank" title="Ver projeto no GitHub">🔗 GitHub</a></td>
+                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
                     <td>2</td>
                     <td>2</td>
                     <td>2</td>
