Corrige linguagens dos alunos do 2º ano: Python (Douglas, Agenor, Layne) e C# (Erik, Lucas, Nathanael)

--- a/site/Rubrica_Etapa1_2Ano_Preenchida.html
+++ b/site/Rubrica_Etapa1_2Ano_Preenchida.html
@@ -236,7 +236,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>DOUGLAS</strong></td>
-                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
+                    <td><span style="color: #666; font-style: italic;">🐍 Python</span></td>
                     <td>4</td>
                     <td>3</td>
                     <td>3</td>
@@ -256,7 +256,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>LAYNE</strong></td>
-                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
+                    <td><span style="color: #666; font-style: italic;">🐍 Python</span></td>
                     <td>3</td>
                     <td>3</td>
                     <td>3</td>
@@ -266,7 +266,7 @@
                 </tr>
                 <tr class="nota-boa">
                     <td><strong>AGENOR</strong></td>
-                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
+                    <td><span style="color: #666; font-style: italic;">🐍 Python</span></td>
                     <td>3</td>
                     <td>3</td>
                     <td>3</td>
@@ -286,7 +286,7 @@
                 </tr>
                 <tr class="nota-satisfatoria">
                     <td><strong>ERIK</strong></td>
-                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
+                    <td><span style="color: #666; font-style: italic;">⚙️ C#</span></td>
                     <td>3</td>
                     <td>2</td>
                     <td>3</td>
@@ -296,7 +296,7 @@
                 </tr>
                 <tr class="nota-regular">
                     <td><strong>NATHANAEL</strong></td>
-                    <td><span style="color: #666; font-style: italic;">📁 Web</span></td>
+                    <td><span style="color: #666; font-style: italic;">⚙️ C#</span></td>
                     <td>2</td>
                     <td>2</td>
                     <td>2</td>
